# mkdocs-bibtex

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
src/mkdocs_bibtex/: __init__.py  plugin.py  utils.py
test_files/: test_features.py  test_plugin.py
tests/: test_cite_blocks.py  test_plugin_behavior.py
