[project]
name = "mkdocs-bibtex"
version = "1.0.0"
description = "An MkDocs plugin that enables managing citations with BibTeX"
readme = "README.md"
license = {text = "BSD-3-Clause-LBNL"}
authors = [{name = "Shyam Dwaraknath", email = "shyamd@lbl.gov"}]
keywords = ["mkdocs", "python", "markdown", "bibtex"]
requires-python = ">=3.7"
dependencies = [
    "mkdocs",
    "requests>=2.8.1",
    "validators>=0.19.0",
    "pybtex"
]

[project.entry-points."mkdocs.plugins"]
bibtex = "mkdocs_bibtex.plugin:BibTeXPlugin"

[tool.uv.sources]
pybtex = { git = "https://github.com/yuriever/pybtex" }